syntax = "proto3";

package register;

enum GENDER {
    MALE = 0;
    FEMALE = 1;
    UNKNOWN = 2;
}

message UserInfoDto {
    optional string birthdayDate = 1;

    optional GENDER gender = 2;
}

message UrlId {
    string url = 1;
}

message CreateUserDto {
    string email = 1;

    string password = 2;
    
    UserInfoDto info = 3;
    
}

service RegisterController {
    rpc createInCacheUser (CreateUserDto) returns (UrlId) {}
}